force-app/main/default/objects/Webinar__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <formula>TEXT( YEAR( DATEVALUE( Webinar_End__c ) ) ) &amp;
LPAD( TEXT( MONTH( DATEVALUE(Webinar_End__c ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( DAY( DATEVALUE(Webinar_End__c ) ) ), 2, &apos;0&apos; ) &amp;
&apos;T&apos; &amp;
LPAD( TEXT( HOUR( TIMEVALUE( DATETIMEVALUE(Webinar_End__c ) ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( MINUTE( TIMEVALUE( DATETIMEVALUE(Webinar_End__c ) ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( SECOND( TIMEVALUE( DATETIMEVALUE(Webinar_End__c ) ) ) ), 2, &apos;0&apos; ) &amp;
&apos;Z&apos;</formula>
    <label>Activity End Date</label>
    <type>Text</type>
</CustomField>