force-app/main/default/objects/Webinar__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <formula>TEXT( YEAR(   DATEVALUE(  Webinar_Start__c ) ) ) &amp;
LPAD( TEXT( MONTH( DATEVALUE(Webinar_Start__c ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( DAY( DATEVALUE(Webinar_Start__c ) ) ), 2, &apos;0&apos; ) &amp;
&apos;T&apos; &amp;
LPAD( TEXT( HOUR( TIMEVALUE(  DATETIMEVALUE(Webinar_Start__c ) ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( MINUTE( TIMEVALUE( DATETIMEVALUE(Webinar_Start__c ) ) ) ), 2, &apos;0&apos; ) &amp;
LPAD( TEXT( SECOND( TIMEVALUE( DATETIMEVALUE(Webinar_Start__c ) ) ) ), 2, &apos;0&apos; ) &amp;
&apos;Z&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Start Date</label>
    <type>Text</type>
</CustomField>