force-app/main/default/objects/Webinar__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Ninjas</fullName>
            </value>
            <value>
                <fullName>Industry Trends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>