force-app/main/default/objects/Webinar__c/fields/Hosted_By__c.field-meta.xml
<CustomField>
    <fullName>Hosted_By__c</fullName>
    <label>Hosted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>