force-app/main/default/objects/Webinar__c/fields/Image_View__c.field-meta.xml
<CustomField>
    <fullName>Image_View__c</fullName>
    <formula>IF( ISBLANK( Image_Path__c ), &quot;Please upload image&quot;, IMAGE( Image_Path__c , &quot;Webinar Image&quot;, 192, 305))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image View</label>
    <type>Text</type>
</CustomField>