force-app/main/default/objects/Webinar__c/fields/Webinar_End__c.field-meta.xml
<CustomField>
    <fullName>Webinar_End__c</fullName>
    <label>Webinar End</label>
    <type>DateTime</type>
</CustomField>