force-app/main/default/objects/Webinar__c/fields/Webinar_Start__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Start__c</fullName>
    <label>Webinar Start</label>
    <type>DateTime</type>
</CustomField>