force-app/main/default/objects/Webinar__c/fields/WebinarLink__c.field-meta.xml
<CustomField>
    <fullName>WebinarLink__c</fullName>
    <inlineHelpText>You may leave it blank</inlineHelpText>
    <label>Webinar Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>